--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -71,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "maiusc",
   "altKey": "alt",
+  "error": "errore",
   "cache": "cache",
   "file": "file",
+  "device": "dispositivo",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -82,6 +84,7 @@
   "menuTrash": "Cestino",
   "menuSetGeneral": "Generale",
   "menuSetAbout": "Info",
+  "menuSetDevices": "Dispositivi",
   "menuAlertNoTags": "Nessun tag",
   "menuAlertNoTagsBody": "Puoi aggiungere nuovi tag durante la modifica dei campi, nella sezione dei tag.",
   "menuEmptyTrash": "Svuota il cestino",
@@ -190,7 +193,7 @@
   "openOpen": "Apri",
   "openNew": "Nuovo",
   "openNewFile": "Nuovo",
-  "openMore": "Di più",
+  "openMore": "Altro",
   "openDemo": "Demo",
   "openGenerate": "Genera",
   "openXml": "Importa xml",
@@ -231,6 +234,10 @@
   "openListErrorBody": "Errore durante il caricamento della lista dei file",
   "openShowAllFiles": "Mostra tutti i file",
   "openFileNoCacheError": "File non trovato nella cache. Questo può accadere se la cache del Browser viene cancellata. Per aprire il file, rimuovilo da KeeWeb a aggiungilo nuovamente.",
+  "openChalRespLoading": "Caricamento lista di YubiKeys",
+  "openChalRespSelectYubiKey": "Seleziona una YubiKey che desideri utilizzare",
+  "openChalRespErrorEmpty": "Nessuna YubiKeys trovata.",
+  "openChalRespErrorEmptyMac": "È la prima volta che utilizzi questa funzione su macOS? KeeWeb deve essere aggiunto alla sezione Input Monitoring dalle impostazioni di sicurezza.",
   "detAttDownload": "Premi Shift+Click sull'allegato per scaricarlo oppure",
   "detAttDelToRemove": "del per cancellare",
   "detAttSave": "Salva come ...",
@@ -284,6 +291,7 @@
   "detMenuAddField": "Aggiungi {}",
   "detMenuCopyPassword": "Copia password",
   "detMenuCopyUser": "Copia utente",
+  "detMenuCopyOtp": "Copia il codice one-time",
   "detSetupOtp": "Password temporanea",
   "detClone": "Duplica",
   "detCopyEntryToClipboard": "Copia tutti i campi",
@@ -314,6 +322,10 @@
   "detOtpQrErrorBody": "Spiacenti, non è possibile leggere il QR code, riprovare nuovamente o contattare gli autori dell'applicazione con il dettaglio dell'errore.",
   "detOtpQrWrong": "Codice QR errato",
   "detOtpQrWrongBody": "Il codice QR è stato letto correttamente ma non contiene dati di una password temporanea.",
+  "detOtpField": "Codice one-time",
+  "detOtpClickToTouch": "Clicca per generare",
+  "detOtpGenerating": "Generazione in corso...",
+  "detOtpTouch": "Seleziona la tua {}",
   "detLockField": "Blocca questo campo: il suo contenuto non sarà ricercabile e visibile. La visualizzazione del contenuto richiede un clic esplicito.",
   "detUnlockField": "Sblocca questo campo, rendendolo immediatamente ricercabile e visibile",
   "detRevealField": "Mostra",
@@ -434,6 +446,7 @@
   "setGenLockAutoType": "Blocco automatico su scrittura automatica",
   "setGenLockOrSleep": "Quando il computer è bloccato o ibernato",
   "setGenStorage": "Archivio",
+  "setGenStorageLogout": "Esci",
   "setGenShowAdvanced": "Mostra impostazioni avanzate",
   "setGenDevTools": "Mostra dev tools",
   "setGenTryBeta": "Prova la versione beta fino al riavvio",
@@ -510,6 +523,16 @@
   "setFileCloseNoSave": "Chiudi e perdi modifiche",
   "setFileDontClose": "Non chiudere",
   "setFileFormatVersion": "Formato file",
+  "setFileExportRaw": "Esporta la tua password",
+  "setFileExportRawBody": "Il file esportato conterrà le tue password, quest'ultime non saranno crittografate. Vuoi continuare?",
+  "setFileDeviceIntro": "Codice one-time di questa {} sarà mostrato nell'app.",
+  "setFileDeviceSettings": "Impostazioni",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Non usare una YubiKey",
+  "setFileRefreshYubiKeyList": "Aggiorna la lista",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Utilizzare una YubiKey come parte della chiave principale è pericoloso e potresti perdere l'accesso alle tue password se qualcosa va storto. Hai eseguito un backup del tuo file prima di modificare questa impostazione?",
+  "setFileYubiKeyErrorEmptyMac": "Sembra che ci sia una YubiKey collegata, ma non è visibile. KeeWeb, per accedere a YubiKeys, deve essere aggiunto alla sezione Input Monitoring dalle impostazioni di sicurezza.",
   "setShTitle": "Scorciatoie",
   "setShShowAll": "Visualizza tutti",
   "setShColors": "Visualizza tutti con colori",
@@ -565,6 +588,22 @@
   "setPlTranslateLink": "tradurre l'applicazione nella tua lingua",
   "setPlAutoUpdate": "Aggiorna automaticamente",
   "setPlLoadGallery": "Carica galleria plugin",
+  "setDevicesTitle": "Dispositivi",
+  "setDevicesEnableUsb": "Abilita interazione con i dispositivi USB",
+  "setDevicesYubiKeyIntro": "Si consiglia di leggere {} prima di utilizzare una YubiKey.",
+  "setDevicesYubiKeyIntroLink": "questo documento",
+  "setDevicesYubiKeyToolsDesc": "Per poter utilizzare YubiKey in questa modalità, è necessario installare uno strumento chiamato {}.",
+  "setDevicesYubiKeyToolsDesc2": "{} per ottenere ulteriori informazioni su questo strumento.",
+  "setDevicesYubiKeyToolsDescLink": "Clicca qui",
+  "setDevicesYubiKeyToolsStatusChecking": "Verifica se {} è installato",
+  "setDevicesYubiKeyToolsStatusOk": "{} è installato",
+  "setDevicesYubiKeyToolsStatusError": "{} non è installato o non funziona",
+  "setDevicesYubiKeyOtpTitle": "Codice one-time",
+  "setDevicesYubiKeyOtpDesc": "YubiKey può essere utilizzato per generare codici monouso per diversi servizi.",
+  "setDevicesYubiKeyOtpShowIcon": "Mostra l'icona nella schermata iniziale",
+  "setDevicesYubiKeyOtpAutoOpen": "Carica automaticamente i codici monouso quando sono presenti file aperti",
+  "setDevicesYubiKeyChalRespShow": "Mostra l'opzione per utilizzare una YubiKey durante l'apertura dei file",
+  "setDevicesYubiKeyStuckWorkaround": "Ricollega la YubiKey se sembra bloccata durante il caricamento",
   "setAboutTitle": "Info su",
   "setAboutBuilt": "Questa applicazione è fatta con questi magnifici strumenti",
   "setAboutLic": "Licenza",
@@ -613,5 +652,12 @@
   "importCsvRun": "Importa",
   "importIgnoreField": "Ignora",
   "importTo": "Le voci verranno importate in",
-  "importNewFile": "Nuovo file"
+  "importNewFile": "Nuovo file",
+  "yubiKeyStuckError": "La YubiKey sembra essere bloccata, la riparazione automatica può essere abilitata nelle impostazioni dell'app.",
+  "yubiKeyNoKeyHeader": "YubiKey richiesta",
+  "yubiKeyNoKeyBody": "Inserisci la tua YubiKey con il numero di serie {}",
+  "yubiKeySlot": "slot",
+  "yubiKeyTouchRequestedBody": "inserisci la tua YubiKey con il numero di serie {}",
+  "yubiKeyDisabledErrorHeader": "La USB è disabilitata",
+  "yubiKeyDisabledErrorBody": "La YubiKey è necessaria per aprire questo file, abilitare i dispositivi USB nelle impostazioni."
 }
