--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -71,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "ошибка",
   "cache": "кэш",
   "file": "Файл",
+  "device": "устройство",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Диск",
@@ -82,6 +84,7 @@
   "menuTrash": "Корзина",
   "menuSetGeneral": "Основные",
   "menuSetAbout": "О программе",
+  "menuSetDevices": "Устройства",
   "menuAlertNoTags": "Нет тегов",
   "menuAlertNoTagsBody": "Вы можете добавлять новые теги при редактировании полей в разделе тегов.",
   "menuEmptyTrash": "Очистить корзину",
@@ -231,6 +234,9 @@
   "openListErrorBody": "При загрузке списка файлов произошла ошибка",
   "openShowAllFiles": "Показать все файлы",
   "openFileNoCacheError": "Файл не найден в кэше. Это могло произойти из-за очистки хранилища браузера. Для открытия файла удалите его из KeeWeb и добавьте снова.",
+  "openChalRespLoading": "Загрузка списка YubiKey-устройств",
+  "openChalRespSelectYubiKey": "Выберите YubiKey который хотите использовать",
+  "openChalRespErrorEmpty": "YubiKey не найден",
   "detAttDownload": "Нажмите Shift и кликните по вложению чтобы загрузить или",
   "detAttDelToRemove": "Delete для удаления",
   "detAttSave": "Сохранить как ...",
@@ -284,6 +290,7 @@
   "detMenuAddField": "Добавить {}",
   "detMenuCopyPassword": "Копировать пароль",
   "detMenuCopyUser": "Копировать логин",
+  "detMenuCopyOtp": "Скопировать одноразовый пароль",
   "detSetupOtp": "Одноразовый пароль",
   "detClone": "Сделать копию",
   "detCopyEntryToClipboard": "Скопировать все поля",
@@ -314,6 +321,10 @@
   "detOtpQrErrorBody": "Извините, мы не могли прочитать QR-код, повторите попытку или обратитесь к авторам приложения с подробными сведениями об ошибке.",
   "detOtpQrWrong": "Неверный QR-код",
   "detOtpQrWrongBody": "Ваш QR-код был успешно проверен, но он не содержит данных одноразового пароля.",
+  "detOtpField": "Одноразовый пароль",
+  "detOtpClickToTouch": "Нажмите, чтобы сгенерировать",
+  "detOtpGenerating": "Генерация...",
+  "detOtpTouch": "Прикоснитесь к {}",
   "detLockField": "Заблокируйте это поле, чтобы его содержимое не было доступно для поиска и не было видно. Для отображения содержимого потребуется явное нажатие на него.",
   "detUnlockField": "Разблокируйте это поле, чтобы сделать его содержимое доступным для поиска и видимым",
   "detRevealField": "Показать",
@@ -434,6 +445,7 @@
   "setGenLockAutoType": "После автозаполнения",
   "setGenLockOrSleep": "Когда компьютер заблокирован или отправлен в сон",
   "setGenStorage": "Хранилище",
+  "setGenStorageLogout": "Выйти",
   "setGenShowAdvanced": "Показать дополнительные настройки",
   "setGenDevTools": "Показать средства разработки",
   "setGenTryBeta": "Попробовать бета-версию до перезагрузки",
@@ -510,6 +522,13 @@
   "setFileCloseNoSave": "Закрыть и потерять изменения",
   "setFileDontClose": "Не закрывать",
   "setFileFormatVersion": "Формат файла",
+  "setFileExportRaw": "Экспорт паролей",
+  "setFileDeviceIntro": "Одноразовые пароли из {} будут отображаться в приложении.",
+  "setFileDeviceSettings": "Настройки",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Не использовать YubiKey",
+  "setFileRefreshYubiKeyList": "Обновить список",
+  "setFileYubiKeyHeader": "YubiKey",
   "setShTitle": "Горячие клавиши",
   "setShShowAll": "показать все элементы",
   "setShColors": "показать элементы этого цвета",
@@ -565,6 +584,18 @@
   "setPlTranslateLink": "перевести приложение на ваш язык",
   "setPlAutoUpdate": "Обновлять автоматически",
   "setPlLoadGallery": "Загрузить галерею плагинов",
+  "setDevicesTitle": "Устройства",
+  "setDevicesEnableUsb": "Включить взаимодействие с USB-устройствами",
+  "setDevicesYubiKeyIntro": "Перед использованием YubiKey рекомендуется прочитать {}.",
+  "setDevicesYubiKeyIntroLink": "этот документ",
+  "setDevicesYubiKeyToolsDesc": "Чтобы использовать YubiKey в этом режиме, вам необходимо установить {}.",
+  "setDevicesYubiKeyToolsDesc2": "{}, чтобы получить дополнительную информацию об этом инструменте.",
+  "setDevicesYubiKeyToolsDescLink": "Нажмите здесь",
+  "setDevicesYubiKeyToolsStatusChecking": "Проверка, установлен ли {}",
+  "setDevicesYubiKeyToolsStatusOk": "{} установлен",
+  "setDevicesYubiKeyToolsStatusError": "{} не установлен или не работает",
+  "setDevicesYubiKeyOtpTitle": "Одноразовые пароли",
+  "setDevicesYubiKeyOtpDesc": "YubiKey можно использовать для генерации одноразовых паролей для различных сервисов.",
   "setAboutTitle": "О",
   "setAboutBuilt": "KeeWeb создан при помощи этих потрясающих инструментов",
   "setAboutLic": "Лицензия",
@@ -613,5 +644,12 @@
   "importCsvRun": "Импорт",
   "importIgnoreField": "игнорировать",
   "importTo": "Записи будут импортированы в",
-  "importNewFile": "Новый файл"
+  "importNewFile": "Новый файл",
+  "yubiKeyNoKeyHeader": "Необходим YubiKey",
+  "yubiKeyNoKeyBody": "Вставьте YubiKey с серийным номером {}",
+  "yubiKeySlot": "слот",
+  "yubiKeyTouchRequestedHeader": "Прикоснитесь к YubiKey",
+  "yubiKeyTouchRequestedBody": "Прикоснитесь к YubiKey с серийным номером {}",
+  "yubiKeyDisabledErrorHeader": "USB отключён",
+  "yubiKeyDisabledErrorBody": "YubiKey необходим для открытия этого файла, включите USB-устройства в настройках."
 }
