--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -523,6 +523,7 @@
   "setFileDontClose": "Не закрывать",
   "setFileFormatVersion": "Формат файла",
   "setFileExportRaw": "Экспорт паролей",
+  "setFileExportRawBody": "Экспортированный файл будет содержать ваши пароли в незашифрованном виде. Продолжить?",
   "setFileDeviceIntro": "Одноразовые пароли из {} будут отображаться в приложении.",
   "setFileDeviceSettings": "Настройки",
   "setFileYubiKey": "YubiKey",
@@ -596,6 +597,7 @@
   "setDevicesYubiKeyToolsStatusError": "{} не установлен или не работает",
   "setDevicesYubiKeyOtpTitle": "Одноразовые пароли",
   "setDevicesYubiKeyOtpDesc": "YubiKey можно использовать для генерации одноразовых паролей для различных сервисов.",
+  "setDevicesYubiKeyOtpShowIcon": "Показывать значок на стартовом экране",
   "setAboutTitle": "О",
   "setAboutBuilt": "KeeWeb создан при помощи этих потрясающих инструментов",
   "setAboutLic": "Лицензия",
