--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -1,4 +1,7 @@
 {
+  "webdavNoLastModified": "Utoljára módosított HTTP fejléc hiányzik",
+  "webdavStatReload": "Mindig töltse újra a fájlt ahelyett, hogy az utoljára módosított HTTP fejlécre hagyatkozna",
+  "yubiKeyErrorWithCode": "YubiKey hiba, kód {}.",
   "months": [
     "Január",
     "Február",
@@ -647,7 +650,7 @@
   "gdriveSharedWithMe": "Velem megosztott",
   "webdavSaveMethod": "Mentési módszer",
   "webdavSaveMove": "Ideiglenes fájl feltöltése és áthelyezése",
-  "webdavSavePut": "kdbx fájl felülírása, PUT-al",
+  "webdavSavePut": "A kdbx fájl felülírása, PUT-al",
   "launcherSave": "Jelszó adatbázis mentése",
   "launcherFileFilter": "KeePass fájlok",
   "authPopupRequired": "Az előugró ablakok blokkoltak",
