--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,4 +1,7 @@
 {
+  "webdavNoLastModified": "Laatst gewijzigde HTTP-header ontbreekt",
+  "webdavStatReload": "Laad het bestand altijd opnieuw in plaats van te vertrouwen op de laatst gewijzigde HTTP-header",
+  "yubiKeyErrorWithCode": "Yubikey fout, code {}",
   "months": [
     "januari",
     "februari",
@@ -291,7 +294,7 @@
   "detMenuHideEmpty": "Lege velden verbergen",
   "detMenuAddField": "{} Toevoegen",
   "detMenuCopyPassword": "Wachtwoord kopiëren",
-  "detMenuCopyUser": "Kopiëer gebruiker",
+  "detMenuCopyUser": "Gebruiker kopiëren",
   "detMenuCopyOtp": "Kopieer de eenmalige code",
   "detSetupOtp": "Eenmalige wachtwoorden",
   "detClone": "Dupliceren",
@@ -540,25 +543,25 @@
   "setShColors": "Items met kleuren weergeven",
   "setShTrash": "Prullenbak",
   "setShFind": "Zoeken, of begin gewoon te typen",
-  "setShClearSearch": "zoekopdracht wissen",
+  "setShClearSearch": "Zoekopdracht wissen",
   "setShCopyPass": "kopieer wachtwoord of geselecteerd veld",
-  "setShCopyUser": "gebruiker kopiëren",
-  "setShCopyUrl": "website kopiëren",
+  "setShCopyUser": "Gebruiker kopiëren",
+  "setShCopyUrl": "Website kopiëren",
   "setShAutoType": "Auto-type gekozen item",
-  "setShPrev": "vorig item",
+  "setShPrev": "Vorig item",
   "setShNext": "volgend item",
-  "setShCreateEntry": "nieuw item aanmaken",
+  "setShCreateEntry": "Nieuw item aanmaken",
   "setShOpen": "openen / nieuw",
-  "setShSave": "alle bestanden opslaan",
-  "setShGen": "wachtwoord genereren",
-  "setShSet": "app-instellingen",
-  "setShCopyPassGlobal": "wachtwoord kopiëren",
+  "setShSave": "Alle bestanden opslaan",
+  "setShGen": "Wachtwoord genereren",
+  "setShSet": "App-instellingen",
+  "setShCopyPassGlobal": "Wachtwoord kopiëren",
   "setShCopyOtp": "Eenmalig wachtwoord kopiëren",
   "setShAutoTypeGlobal": "Auto-type",
   "setShCopyPassOnly": "Wachtwoord kopiëren",
   "setShRestoreApp": "{} openen",
   "setShGlobal": "Globale sneltoetsen zijn actief terwijl de app in de achtergrond draait. Je kunt een sneltoets klikken om deze aan te passen.",
-  "setShLock": "database blokkeren",
+  "setShLock": "Database blokkeren",
   "setShEdit": "Druk een nieuwe toetscombinatie om deze in te stellen als sneltoets",
   "setPlInstallTitle": "Nieuwe plug-ins installeren",
   "setPlInstallDesc": "KeeWeb plug-ins voegen functies, thema's en vertalingen toe aan KeeWeb. Plug-ins functioneren met dezelfde privileges als KeeWeb; zij krijgen toegang tot al je wachtwoorden en kunnen deze beheren. Installeer nooit plug-ins die je niet vertrouwt.",
