--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -1,4 +1,6 @@
 {
+  "webdavNoLastModified": "HTTP-заголовок Last-Modified отсутствует",
+  "yubiKeyErrorWithCode": "Ошибка YubiKey, код {}.",
   "months": [
     "Января",
     "Февраля",
