--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -276,7 +276,7 @@
   "detOtpQrError": "Erreur lecture du QR code",
   "detOtpQrErrorBody": "Désolé, le QR code n'a pas pu être lu, essayez à nouveau ou contacter les auteurs de l'application avec le détail de l'erreur.",
   "detOtpQrWrong": "QR code incorrect",
-  "detOtpQrWrongBody": "Votre QR code a été scanné avec succès mais il ne contient pas d'information pour un mot de passe à usage unique.",
+  "detOtpQrWrongBody": "Votre code QR code a été scanné avec succès mais il ne contient pas d'information pour un code à usage unique.",
   "detOtpField": "Code à usage unique",
   "detOtpClickToTouch": "Cliquer pour générer",
   "detOtpGenerating": "Création...",
@@ -467,10 +467,10 @@
   "setFileUseKeyFile": "Utiliser un fichier clé",
   "setFileUseGenKeyFile": "Utiliser le fichier clé généré",
   "setFileUseOldKeyFile": "Utiliser l'ancien fichier clé",
-  "setFileGenKeyFile": "Générer nouveau fichier clé",
+  "setFileGenKeyFile": "Générer un nouveau fichier clé",
   "setFileDontUseKeyFile": "Ne pas utiliser de fichier clé",
   "setFileEmptyPass": "Mot de passe vide",
-  "setFileEmptyPassBody": "Sauvegarder la base de données avec un mode de passe vide la laisse sans aucune protection. Voulez-vous vraiment faire cela ?",
+  "setFileEmptyPassBody": "Sauvegarder la base de données avec un mot de passe vide la laisse sans aucune protection. Voulez-vous vraiment faire cela ?",
   "setFileSaveError": "Erreur sauvegarde",
   "setFileSaveErrorBody": "Erreur sauvegarde dans le fichier",
   "setFileAlreadyExists": "Existe déjà",
