--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -351,12 +351,15 @@
   "setGenDownloadAndRestart": "Frissítés letöltése és újraindítás",
   "setGenAppearance": "Megjelenés",
   "setGenTheme": "Téma",
+  "setGenThemeDark": "Sötét",
+  "setGenThemeLight": "Világos",
   "setGenThemeFb": "Sima kék",
   "setGenThemeDb": "Sötét barna",
   "setGenThemeTe": "Terminál",
   "setGenThemeHc": "Nagykontrasztú",
   "setGenThemeSd": "Beégetett sötét",
   "setGenThemeSl": "Beégetett világos",
+  "setGenMoreThemes": "További témák",
   "setGenLocale": "Nyelv",
   "setGenLocOther": "további nyelvek beépülőként érhetők el",
   "setGenFontSize": "Betűméret",
@@ -565,7 +568,7 @@
   "setAboutTitle": "Névjegy",
   "setAboutBuilt": "Ez az alkalmazás ezekkel a fantasztikus eszközökkel készült",
   "setAboutLic": "Licenc",
-  "setAboutLicComment": "Az alkalmazás és minden nem közkinccsé nyilvánított komponense az MIT licenc alatt kerültek kiadásra.",
+  "setAboutLicComment": "Az alkalmazás és minden komponense az MIT licenc alatt kerültek kiadásra.",
   "setAboutFirst": "Ez egy nyílt forráskódú alkalmazás, melyet {} készített.",
   "setAboutSecond": "és licencelve {} alatt.",
   "setAboutSource": "A forráskód és a problémák a {}-on érhetők el.",
